ADD :: text add

--- a/html/index.html
+++ b/html/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='icon' type='images/png' href='https://i.namu.wiki/i/-8KJcKbBEU4IOQ7kUrzgjJByLbaBy6ZG95cFmwWV-UHD0b0JObVhh3-BqVY9h03_TOGm-rOxNB4DjS37GfhUMeUzPtoqZkUib6AY2FyDyu4oz0Q87jL0lQK03lRL8b5grtsYd_LS4CVhfkzoyV2BjA.webp'>
+    <link rel="stylesheet" href="../css/hi.css">
+    <link rel="icon" href="https://asset.brandfetch.io/idPqy6xHK-/idfnFBE52I.png">
     <title>노마드 코더 Nomad Coders - Clone Startups. Learn to Code.</title>
 </head>
 <body>
-    <header>
+    <nav>
+        <img class="logo" src="../img/nomad-coders-logos-idfnFBE52I.png">
         <div class="menubar">
             <ul class="menu">
                 <li class="menu-item">Courses</li>
@@ -19,7 +21,18 @@
                 <li>Roadmap</li>
             </ul>
         </div>
-    </header>
+        <div class="login">
+            <button class="lo" type="submit">Login</button>
+            <button class="jo" type="submit">Join</button>
+        </div>
+    </nav>
+    <section>
+        <div class="ttt">
+            <h1 id="g1">Clone Startups.</h1>
+            <h1 id="g2">Learn to code.</h1>
+        </div>
+    </section>
+        
 
 </body>
 </html>
