--- a/html/index.html
+++ b/html/index.html
@@ -26,10 +26,19 @@
             <button class="jo" type="submit">Join</button>
         </div>
     </nav>
+        <div class="separator">
+        </div>
     <section>
         <div class="ttt">
             <h1 id="g1">Clone Startups.</h1>
             <h1 id="g2">Learn to code.</h1>
+        </div>
+        <div class="ggg">
+            <p>코딩은 진짜를 만들어보는거야!</p>
+            <p>실제 서비스를 따라 만들면서 코딩을 배우세요.</p>
+        </div>
+        <div class="go">
+            <button class="goo" type="submit">Go to Dashboard→</button>
         </div>
     </section>
         
