--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
             <p>실제 서비스를 따라 만들면서 코딩을 배우세요.</p>
         </div>
         <div class="go">
-            <button class="goo" type="submit">Go to Dashboard→</button>
+            <button class="goo" type="submit">시작하기→</button>
         </div>
     </section>
         
