--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
     <title>노마드 코더 Nomad Coders - Clone Startups. Learn to Code.</title>
 </head>
 <body>
+    <header>
     <nav>
         <img class="logo" src="../img/nomad-coders-logos-idfnFBE52I.png">
         <div class="menubar">
@@ -26,6 +27,7 @@
             <button class="jo" type="submit">Join</button>
         </div>
     </nav>
+    </header>
         <div class="separator">
         </div>
     <section>
@@ -40,6 +42,9 @@
         <div class="go">
             <button class="goo" type="submit">시작하기→</button>
         </div>
+        <div class="ss">
+        </div>
+        div
     </section>
         
 
